--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="import" href="./pages/signin.html" />
     <link rel="import" href="./pages/signup.html" />
-    <!-- <link
-      rel="icon"
-      href="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg"
-    /> -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
     <link rel="import" href="Metal_RollupMetalRusted.jpg" />
     <link rel="import" href="fidget-spinner.png" />
     <link rel="import" href="/img/feature1.png" />
     <link rel="import" href="/img/feature2.png" />
-    <link rel="import" href="/amazon.png" />
+    <link rel="import" href="amazon.png" />
 
     <title>
       Online Shopping site: Shop Online for Mobiles, Books, Watches, Shoes and
@@ -34,7 +35,7 @@
         <div class="nav-left">
           <a href="" class="nav-logo">
             <img
-              src="/amazon.png"
+              src="amazon.png"
               alt="Amazon"
             />
           </a>
@@ -673,7 +674,7 @@
           </div>
           <div class="horizontal-line"></div>
           <div class="choose-country_container">
-            <a href="" class="footer-top_logo"><img src="/amazon.png" alt="" /></a>
+            <a href="" class="footer-top_logo"><img src="amazon.png" alt="" /></a>
             <div class="choose-country">
               <i class="fa-solid fa-globe"></i>
               <a href="">English</a>
