Adding Dropdown to Navs

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
               <div class="english">
                 <p>EN</p>
                 <i class="fa-solid fa-caret-down"></i>
+                <!-- <ul class="sub-menu">
+                </ul> -->
               </div>
             </a>
           </div>
@@ -78,7 +80,37 @@
             <div class="acc-list">
             <p>Account &amp; Lists</p>
             <i class="fa-solid fa-caret-down"></i>
-            </div>
+            <ul class="sub-menu">
+              <li>
+                <div class="sub-menu_top">
+                  <button class="sign-btn_cta">Sign up</button>
+                  <p>New customer? <span><a href="">Start here</a></span></p>
+                </div>
+              </li>
+              <li class="sub-menu_bottom">
+                  <ul class="sub-menu_btm-left">
+                    <h2>Your List</h2>
+                    <li><a href="">Create a List</a></li>
+                    <li><a href="">Find a List or Registry</a></li>
+                  </ul>
+                  <ul class="sub-menu_btm-right">
+                    <h2>Your Account</h2>
+                    <li><a href="">Accounts</a></li>
+                    <li><a href="">Orders</a></li>
+                    <li><a href="">Recommandation</a></li>
+                    <li><a href="">Browsing History</a></li>
+                    <li><a href="">Accounts</a></li>
+                    <li><a href="">Orders</a></li>
+                    <li><a href="">Recommandation</a></li>
+                    <li><a href="">Content &amp; Devices</a></li>
+                    <li><a href="">Content &amp; Devices</a></li>
+                    <li><a href="">Recommandation</a></li>
+                    <li><a href="">Browsing History</a></li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
           </div>
 
           <div class="return border-white">
@@ -97,7 +129,7 @@
       <div class="nav-bar">
         <div class="menu-all">
           <i class="fa-solid fa-bars"></i>
-          <button id="show-menu" onclick={showMenu}>All</button>
+          <button id="show-menu" onclick={showmenu}>All</button>
         </div>
         <div class="nav-all">
           <ul>
@@ -115,8 +147,11 @@
       </div>
 
       <!-- MOBILE MENU -->
-       <div class="menu">
+       <div class="mobile-menu">
+          <div class="mobile-menu_container">
+            
 
+          </div>
        </div>
     </header>
 
