--- a/index.html
+++ b/index.html
@@ -69,10 +69,27 @@
               <div class="english">
                 <p>EN</p>
                 <i class="fa-solid fa-caret-down"></i>
-                <!-- <ul class="sub-menu">
-                </ul> -->
               </div>
             </a>
+            <ul class="sub-menu">
+              <li class="default-lang">
+                <p>Change language<span><a href="">Learn more</a></span></p>
+                <a href="">
+                    <i class="fa-regular fa-circle-dot"></i>
+                    <p>English</p>
+                </a>
+              </li>
+              <li class="alt-lang">
+                <ul class="alt-lang_wrapper">
+                  <li>
+                    <a href="">
+                      <i class="fa-regular fa-circle-dot"></i>
+                      <p>Spain</p>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
           </div>
 
           <div class="btn-cta border-white">
@@ -107,7 +124,6 @@
                     <li><a href="">Recommandation</a></li>
                     <li><a href="">Browsing History</a></li>
                   </ul>
-                </div>
               </li>
             </ul>
           </div>
