--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
                 <i class="fa-solid fa-caret-down"></i>
               </div>
             </a>
-            <ul class="sub-menu">
-              <li class="default-lang">
+            <div class="sub-menu lang">
+              <div class="default-lang">
                 <p>Change language<span><a href="">Learn more</a></span></p>
                 <a href="">
-                    <i class="fa-regular fa-circle-dot"></i>
-                    <p>English</p>
+                  <i class="fa-regular fa-circle-dot"></i>
+                  <p>English</p>
                 </a>
-              </li>
-              <li class="alt-lang">
+              </div>
+              <div class="alt-lang">
                 <ul class="alt-lang_wrapper">
                   <li>
                     <a href="">
@@ -88,8 +88,8 @@
                     </a>
                   </li>
                 </ul>
-              </li>
-            </ul>
+              </div>
+            </div>
           </div>
 
           <div class="btn-cta border-white">
@@ -97,14 +97,12 @@
             <div class="acc-list">
             <p>Account &amp; Lists</p>
             <i class="fa-solid fa-caret-down"></i>
-            <ul class="sub-menu">
-              <li>
-                <div class="sub-menu_top">
-                  <button class="sign-btn_cta">Sign up</button>
-                  <p>New customer? <span><a href="">Start here</a></span></p>
-                </div>
-              </li>
-              <li class="sub-menu_bottom">
+            <div class="sub-menu signup">
+              <div class="sub-menu_top">
+                <button class="sign-btn_cta">Sign up</button>
+                <p>New customer? <span><a href="">Start here</a></span></p>
+              </div>
+              <div class="sub-menu_bottom">
                   <ul class="sub-menu_btm-left">
                     <h2>Your List</h2>
                     <li><a href="">Create a List</a></li>
@@ -124,8 +122,8 @@
                     <li><a href="">Recommandation</a></li>
                     <li><a href="">Browsing History</a></li>
                   </ul>
-              </li>
-            </ul>
+              </div>
+            </div>
           </div>
           </div>
 
@@ -165,9 +163,52 @@
       <!-- MOBILE MENU -->
        <div class="mobile-menu">
           <div class="mobile-menu_container">
-            
+            <div class="menu-hello">
+              <div class="menu-profile">
+                <img src="" alt="">
+              </div>
+              <h2>Hello, sign in</h2>
+            </div>
+            <div class="menu-trending">
+              <h2>Trending</h2>
+              <ul>
+                <li><a href="">Best Sellers</a></li>
+                <li><a href="">New Releases</a></li>
+                <li><a href="">Movers &amp; Shakers</a></li>
+              </ul>
+              <div class="horizontal-line"></div>
+            </div>
+            <div class="menu-digital_content">
+              <h2>Trending</h2>
+              <ul>
+                <li><a href="">Best Sellers <span><i fa-regular fa-angle-left></i></span></a></li>
+                <li><a href="">New Releases <span><i fa-regular fa-angle-left></i></span></a></li>
+                <li><a href="">Movers &amp; Shakers <span><i fa-regular fa-angle-left></i></span></a></li>
+              </ul>
+              <div class="horizontal-line"></div>
+            </div>
+            <div class="menu-trending">
+              <h2>Trending</h2>
+              <ul>
+                <li><a href="">Best Sellers</a></li>
+                <li><a href="">New Releases</a></li>
+                <li><a href="">Movers &amp; Shakers</a></li>
+              </ul>
+              <div class="horizontal-line"></div>
+            </div>
 
+            
+            <div class="menu-trending">
+              <h2>Trending</h2>
+              <ul>
+                <li><a href="">Best Sellers</a></li>
+                <li><a href="">New Releases</a></li>
+                <li><a href="">Movers &amp; Shakers</a></li>
+              </ul>
+              <div class="horizontal-line"></div>
+            </div>
           </div>
+          <div class="close-btn"><i fa-regular fa-close></i></div>
        </div>
     </header>
 
