--- a/index.html
+++ b/index.html
@@ -160,57 +160,72 @@
         </div>
       </div>
 
-      <!-- MOBILE MENU -->
-       <div class="mobile-menu">
-          <div class="mobile-menu_container">
-            <div class="menu-hello">
-              <div class="menu-profile">
-                <img src="" alt="">
-              </div>
-              <h2>Hello, sign in</h2>
-            </div>
-            <div class="menu-trending">
-              <h2>Trending</h2>
-              <ul>
-                <li><a href="">Best Sellers</a></li>
-                <li><a href="">New Releases</a></li>
-                <li><a href="">Movers &amp; Shakers</a></li>
-              </ul>
-              <div class="horizontal-line"></div>
-            </div>
-            <div class="menu-digital_content">
-              <h2>Trending</h2>
-              <ul>
-                <li><a href="">Best Sellers <span><i fa-regular fa-angle-left></i></span></a></li>
-                <li><a href="">New Releases <span><i fa-regular fa-angle-left></i></span></a></li>
-                <li><a href="">Movers &amp; Shakers <span><i fa-regular fa-angle-left></i></span></a></li>
-              </ul>
-              <div class="horizontal-line"></div>
-            </div>
-            <div class="menu-trending">
-              <h2>Trending</h2>
-              <ul>
-                <li><a href="">Best Sellers</a></li>
-                <li><a href="">New Releases</a></li>
-                <li><a href="">Movers &amp; Shakers</a></li>
-              </ul>
-              <div class="horizontal-line"></div>
-            </div>
-
-            
-            <div class="menu-trending">
-              <h2>Trending</h2>
-              <ul>
-                <li><a href="">Best Sellers</a></li>
-                <li><a href="">New Releases</a></li>
-                <li><a href="">Movers &amp; Shakers</a></li>
-              </ul>
-              <div class="horizontal-line"></div>
-            </div>
-          </div>
-          <div class="close-btn"><i fa-regular fa-close></i></div>
-       </div>
     </header>
+    
+    <!-- MOBILE MENU -->
+     <div class="mobile-menu">
+        <div class="mobile-menu_container">
+          <div class="menu-hello">
+            <div class="menu-profile menu">
+              <img src="" alt="">
+            </div>
+            <h2>Hello, sign in</h2>
+          </div>
+          <div class="menu-trending menu">
+            <h2>Trending</h2>
+            <ul>
+              <li><a href="">Best Sellers</a></li>
+              <li><a href="">New Releases</a></li>
+              <li><a href="">Movers &amp; Shakers</a></li>
+            </ul>
+            <div class="horizontal-line"></div>
+          </div>
+          <div class="menu-digital_content menu">
+            <h2>Trending</h2>
+            <ul>
+              <li><a href="">Best Sellers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">New Releases <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">Movers &amp; Shakers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">Best Sellers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">New Releases <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">Movers &amp; Shakers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">Best Sellers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">New Releases <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">Movers &amp; Shakers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+            </ul>
+            <div class="horizontal-line"></div>
+          </div>
+          <div class="menu-digital_content menu">
+            <h2>Trending</h2>
+            <ul>
+              <li><a href="">Best Sellers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">New Releases <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">Movers &amp; Shakers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+            </ul>
+            <div class="horizontal-line"></div>
+          </div>
+          <div class="menu-digital_content menu">
+            <h2>Trending</h2>
+            <ul>
+              <li><a href="">Best Sellers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">New Releases <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">Movers &amp; Shakers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+            </ul>
+            <div class="horizontal-line"></div>
+          </div>
+          <div class="menu-digital_content menu">
+            <h2>Trending</h2>
+            <ul>
+              <li><a href="">Best Sellers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">New Releases <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+              <li><a href="">Movers &amp; Shakers <span><i class="fa-solid fa-angle-left"></i></span></a></li>
+            </ul>
+            <div class="horizontal-line"></div>
+          </div>
+
+        </div>
+        <div class="close-btn"><i class="fa-solid fa-close"></i></div>
+     </div>
 
     <!-- Main Body -->
 
